Task 6 test rest (#5)
* Added rest test

* Added integration tests

* Changed INVOICES_DB_PATH